# HotelAdminOnQT

./: CMakeLists.txt  README.md  bookings.json  main.cpp  mainwidget.ui  rooms.json
ClientsListWidget/: clientslistwidget.cpp  clientslistwidget.h  clientslistwidget.ui
DataBases/: ClientDataBase.h  DataBase.cpp  DataBase.h  DataBaseAdapter.h  DataBaseRepository.h  HotelRoomDataBase.h
Entities/: Booking.h  BookingBuilder.h  HotelRoomBuilder.h
Entities/Booking/: BookingBuilder.h  BookingJSONParser.cpp  BookingJSONParser.h
Entities/Booking/Models/: Booking.cpp  Booking.h  Client.cpp  Client.h
Entities/Client/: Client.cpp  Client.h
Entities/Equipment/: Equipment.cpp  Equipment.h
Entities/HotelRoom/: BusinessClassHotelRoom.h  HotelRoomBuilder.h  HotelRoomInterface.h  HotelRoomJSONParser.cpp  HotelRoomJSONParser.h  LuxuryHotelRoom.h  RegularHotelRoom.h
Entities/HotelRoom/Builder/: BusinessClassHotelRoomBuilder.h  HotelRoomBuilder.h  HotelRoomDirector.h  LuxuryHotelRoomBuilder.h  RegularHotelRoomBuilder.h
Entities/HotelRoom/Models/: BusinessClassHotelRoom.h  HotelRoom.cpp  HotelRoom.h  HotelRoomInterface.cpp  HotelRoomInterface.h  LuxuryHotelRoom.h  RegularHotelRoom.h
HotelRoomListWidget/: hotelroomlistwidget.cpp  hotelroomlistwidget.h
MainTabWindow/: maintabwindow.cpp  maintabwindow.ui
QtWidgets/: appendhotelroomdialog.cpp  appendhotelroomdialog.h  appendhotelroomdialog.ui
QtWidgets/AppendClientDialog/: appendclientdialog.cpp  appendclientdialog.h  appendclientdialog.ui
QtWidgets/AppendHotelRoomDialog/: appendhotelroomdialog.cpp  appendhotelroomdialog.h  appendhotelroomdialog.ui
QtWidgets/ClientsListWidget/: clientslistwidget.cpp  clientslistwidget.h  clientslistwidget.ui
QtWidgets/HotelRoomListWidget/: hotelroomlistwidget.cpp  hotelroomlistwidget.h  hotelroomlistwidget.ui
QtWidgets/MainTabWindow/: maintabwindow.cpp  maintabwindow.h
getListingPythonScript/: main.py
